fix: replace quill-delta with quill-delta-es

--- a/packages/quill/package.json
+++ b/packages/quill/package.json
@@ -10,7 +10,7 @@
     "eventemitter3": "^5.0.1",
     "lodash-es": "^4.17.21",
     "parchment": "^3.0.0",
-    "quill-delta": "^5.1.0"
+    "quill-delta-es": "^5.2.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
